fe/templates/service.yaml

apiVersion: v1
kind: Service
metadata:
  name: craftista-fe-svc
  namespace: craftista

spec:
  selector:
    app: craftista-fe
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
