fe/templates/ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fe-ingress
  namespace: craftista
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
  - host: ip172-18-0-3-d1tth5qki0og00e8bm7g.direct.labs.play-with-k8s.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: craftista-fe-svc
            port: 
              number: 80
